--- a/signup.html
+++ b/signup.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل حساب جديد</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-database.js"></script>
+  <meta charset="UTF-8">
+  <title>إنشاء حساب | rengeM</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="container">
-        <h2>تسجيل حساب جديد</h2>
-        <form id="signup-form">
-            <input type="text" id="full-name" placeholder="الاسم الكامل" required>
-            <input type="text" id="username" placeholder="اسم المستخدم" required>
-            <input type="password" id="password" placeholder="كلمة المرور" required>
-            <button type="submit">تسجيل</button>
-        </form>
-    </div>
-
-    <script src="app.js"></script>
+  <div class="container">
+    <h1 class="logo">rengeM</h1>
+    <h2>إنشاء حساب</h2>
+    <input type="text" id="fullName" placeholder="الاسم الكامل">
+    <input type="text" id="signupUsername" placeholder="اسم المستخدم">
+    <input type="password" id="signupPassword" placeholder="كلمة السر">
+    <button onclick="signup()">إنشاء الحساب</button>
+    <p>لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
+  </div>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
