--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <div class="actions">
         <a href="login.html" class="btn">تسجيل الدخول</a>
         <a href="signup.html" class="btn secondary">إنشاء حساب</a>
+        <a href="add-friend.html" class="btn">إضافة صديق</a>
+        <button onclick="goBack()" class="btn secondary">رجوع</button>
       </div>
     </main>
 
@@ -26,5 +28,11 @@
       <p>© 2025 rengeM - جميع الحقوق محفوظة</p>
     </footer>
   </div>
+
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
 </body>
 </html>
