--- a/index.html
+++ b/index.html
@@ -2,37 +2,14 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>rengeM - تطبيق المراسلة</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>rengeM</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="home-page">
+<body>
   <div class="container">
-    <header class="logo">
-      <h1 class="app-name">rengeM</h1>
-    </header>
-
-    <main class="welcome">
-      <h2>مرحبًا بك في rengeM</h2>
-      <p>تطبيق دردشة بسيط، سريع وآمن. تواصل مع أصدقائك الآن!</p>
-
-      <div class="actions">
-        <a href="login.html" class="btn">تسجيل الدخول</a>
-        <a href="signup.html" class="btn secondary">إنشاء حساب</a>
-        <a href="add-friend.html" class="btn">إضافة صديق</a>
-        <button onclick="goBack()" class="btn secondary">رجوع</button>
-      </div>
-    </main>
-
-    <footer class="footer">
-      <p>© 2025 rengeM - جميع الحقوق محفوظة</p>
-    </footer>
+    <h1>تطبيق rengeM</h1>
+    <a href="login.html" class="btn">تسجيل الدخول</a>
+    <a href="signup.html" class="btn">إنشاء حساب</a>
   </div>
-
-  <script>
-    function goBack() {
-      window.history.back();
-    }
-  </script>
 </body>
 </html>
