--- a/login.html
+++ b/login.html
@@ -2,18 +2,33 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>تسجيل الدخول | rengeM</title>
+  <title>تسجيل الدخول</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1 class="logo">rengeM</h1>
+  <div class="form-container">
     <h2>تسجيل الدخول</h2>
-    <input type="text" id="loginUsername" placeholder="اسم المستخدم">
-    <input type="password" id="loginPassword" placeholder="كلمة السر">
+    <input type="text" id="username" placeholder="اسم المستخدم">
+    <input type="password" id="password" placeholder="كلمة المرور">
     <button onclick="login()">تسجيل الدخول</button>
-    <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
+    <p id="error"></p>
   </div>
-  <script type="module" src="app.js"></script>
+
+  <script>
+    async function login() {
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value;
+
+      const res = await fetch('users.json');
+      const users = await res.json();
+
+      if (users[username] && users[username].password === password) {
+        localStorage.setItem("username", username);
+        window.location.href = "chat.html";
+      } else {
+        document.getElementById("error").innerText = "اسم المستخدم أو كلمة المرور غير صحيحة";
+      }
+    }
+  </script>
 </body>
 </html>
