--- a/chat.html
+++ b/chat.html
@@ -1,27 +1,68 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>الدردشة</title>
-  <link rel="stylesheet" href="style.css">
+  <title>محادثة</title>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getDatabase, ref, onValue, push } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
+      authDomain: "messengerapp-58f7a.firebaseapp.com",
+      databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
+      projectId: "messengerapp-58f7a",
+      appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    const urlParams = new URLSearchParams(window.location.search);
+    const receiverId = urlParams.get("uid");
+    const currentUserId = localStorage.getItem("userId"); // تأكد من تخزين ID المستخدم عند تسجيل الدخول
+
+    const messagesRef = ref(db, `messages/${currentUserId}_${receiverId}`);
+    const chatBox = document.getElementById("chat-box");
+
+    onValue(messagesRef, (snapshot) => {
+      chatBox.innerHTML = "";
+      const messages = snapshot.val();
+      for (let id in messages) {
+        const msg = messages[id];
+        const div = document.createElement("div");
+        div.className = msg.sender === currentUserId ? "me" : "them";
+        div.textContent = msg.text;
+        chatBox.appendChild(div);
+      }
+    });
+
+    document.getElementById("send-btn").onclick = () => {
+      const input = document.getElementById("message");
+      const msg = input.value;
+      if (!msg) return;
+      push(messagesRef, {
+        sender: currentUserId,
+        receiver: receiverId,
+        text: msg,
+        timestamp: Date.now()
+      });
+      input.value = "";
+    };
+  </script>
+  <style>
+    body { font-family: Tahoma; direction: rtl; padding: 20px; background: #fff; }
+    #chat-box { min-height: 300px; background: #f5f5f5; padding: 10px; border-radius: 10px; margin-bottom: 15px; }
+    .me { background: #00bfff; color: white; margin: 5px 0; padding: 10px; border-radius: 10px; text-align: right; }
+    .them { background: #e0e0e0; margin: 5px 0; padding: 10px; border-radius: 10px; text-align: left; }
+    #message { width: 80%; padding: 10px; border-radius: 10px; border: 1px solid #ccc; }
+    #send-btn { padding: 10px 20px; background: #00bfff; color: white; border: none; border-radius: 10px; }
+  </style>
 </head>
 <body>
-  <div class="chat-list">
-    <h2>الأصدقاء</h2>
-    <ul id="friendsList"></ul>
-    <input type="text" id="friendUsername" placeholder="أدخل اسم المستخدم">
-    <button onclick="addFriend()">إضافة</button>
-  </div>
-
-  <script>
-    async function addFriend() {
-      const friend = document.getElementById("friendUsername").value.trim();
-      if (!friend) return;
-
-      window.location.href = `private-chat.html?user=${friend}`;
-    }
-
-    // تحميل قائمة الأصدقاء لاحقاً
-  </script>
+  <h2>الدردشة</h2>
+  <div id="chat-box"></div>
+  <input type="text" id="message" placeholder="اكتب رسالة...">
+  <button id="send-btn">إرسال</button>
 </body>
 </html>
