--- a/login.html
+++ b/login.html
@@ -1,34 +1,103 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <title>تسجيل الدخول</title>
-  <link rel="stylesheet" href="style.css">
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
+      authDomain: "messengerapp-58f7a.firebaseapp.com",
+      databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
+      projectId: "messengerapp-58f7a",
+      appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    document.getElementById("loginBtn").onclick = async () => {
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      if (!username || !password) {
+        alert("يرجى إدخال اسم المستخدم وكلمة المرور");
+        return;
+      }
+
+      const usersRef = ref(db, "users");
+
+      try {
+        const snapshot = await get(usersRef);
+        const users = snapshot.val();
+        let found = false;
+
+        for (let uid in users) {
+          const user = users[uid];
+          if (user.username === username && user.password === password) {
+            found = true;
+            localStorage.setItem("userId", uid);
+            window.location.href = "chat.html";
+            break;
+          }
+        }
+
+        if (!found) {
+          alert("اسم المستخدم أو كلمة المرور غير صحيحة");
+        }
+      } catch (error) {
+        console.error("حدث خطأ:", error);
+        alert("فشل في الاتصال بقاعدة البيانات");
+      }
+    };
+  </script>
+  <style>
+    body {
+      font-family: Tahoma;
+      background: #f2f2f2;
+      padding: 30px;
+      text-align: center;
+    }
+    .login-container {
+      background: white;
+      padding: 30px;
+      border-radius: 15px;
+      max-width: 400px;
+      margin: auto;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    input {
+      display: block;
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 16px;
+    }
+    button {
+      background-color: #2196f3;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 10px;
+      width: 100%;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #1976d2;
+    }
+  </style>
 </head>
 <body>
-  <div class="form-container">
+  <div class="login-container">
     <h2>تسجيل الدخول</h2>
     <input type="text" id="username" placeholder="اسم المستخدم">
     <input type="password" id="password" placeholder="كلمة المرور">
-    <button onclick="login()">تسجيل الدخول</button>
-    <p id="error"></p>
+    <button id="loginBtn">دخول</button>
   </div>
-
-  <script>
-    async function login() {
-      const username = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value;
-
-      const res = await fetch('users.json');
-      const users = await res.json();
-
-      if (users[username] && users[username].password === password) {
-        localStorage.setItem("username", username);
-        window.location.href = "chat.html";
-      } else {
-        document.getElementById("error").innerText = "اسم المستخدم أو كلمة المرور غير صحيحة";
-      }
-    }
-  </script>
 </body>
 </html>
