--- a/login.html
+++ b/login.html
@@ -1,103 +1,26 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>تسجيل الدخول</title>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
-      authDomain: "messengerapp-58f7a.firebaseapp.com",
-      databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
-      projectId: "messengerapp-58f7a",
-      appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    document.getElementById("loginBtn").onclick = async () => {
-      const username = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value.trim();
-
-      if (!username || !password) {
-        alert("يرجى إدخال اسم المستخدم وكلمة المرور");
-        return;
-      }
-
-      const usersRef = ref(db, "users");
-
-      try {
-        const snapshot = await get(usersRef);
-        const users = snapshot.val();
-        let found = false;
-
-        for (let uid in users) {
-          const user = users[uid];
-          if (user.username === username && user.password === password) {
-            found = true;
-            localStorage.setItem("userId", uid);
-            window.location.href = "chat.html";
-            break;
-          }
-        }
-
-        if (!found) {
-          alert("اسم المستخدم أو كلمة المرور غير صحيحة");
-        }
-      } catch (error) {
-        console.error("حدث خطأ:", error);
-        alert("فشل في الاتصال بقاعدة البيانات");
-      }
-    };
-  </script>
-  <style>
-    body {
-      font-family: Tahoma;
-      background: #f2f2f2;
-      padding: 30px;
-      text-align: center;
-    }
-    .login-container {
-      background: white;
-      padding: 30px;
-      border-radius: 15px;
-      max-width: 400px;
-      margin: auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    input {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      font-size: 16px;
-    }
-    button {
-      background-color: #2196f3;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 10px;
-      width: 100%;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #1976d2;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>تسجيل الدخول - rengeM</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="login-container">
-    <h2>تسجيل الدخول</h2>
-    <input type="text" id="username" placeholder="اسم المستخدم">
-    <input type="password" id="password" placeholder="كلمة المرور">
-    <button id="loginBtn">دخول</button>
+    <h2 class="app-title">rengeM</h2>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="اسم المستخدم" required />
+      <input type="password" id="password" placeholder="كلمة المرور" required />
+      <button type="submit">تسجيل الدخول</button>
+      <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
+    </form>
   </div>
+
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+  <script src="firebase-config.js"></script>
+  <script src="login.js"></script>
 </body>
 </html>
