--- a/signup.html
+++ b/signup.html
@@ -1,50 +1,27 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>إنشاء حساب</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>إنشاء حساب - rengeM</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="form-container">
-    <h2>إنشاء حساب</h2>
-    <input type="text" id="fullName" placeholder="الاسم الكامل">
-    <input type="text" id="username" placeholder="اسم المستخدم">
-    <input type="password" id="password" placeholder="كلمة المرور">
-    <button onclick="signup()">إنشاء</button>
-    <p id="error"></p>
+  <div class="signup-container">
+    <h2 class="app-title">rengeM</h2>
+    <form id="signupForm">
+      <input type="text" id="fullName" placeholder="الاسم الكامل" required />
+      <input type="text" id="username" placeholder="اسم المستخدم" required />
+      <input type="password" id="password" placeholder="كلمة المرور" required />
+      <button type="submit">إنشاء الحساب</button>
+      <p>لديك حساب بالفعل؟ <a href="login.html">تسجيل الدخول</a></p>
+    </form>
   </div>
 
-  <script>
-    async function signup() {
-      const fullName = document.getElementById("fullName").value.trim();
-      const username = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value;
-
-      if (!username || !password || !fullName) {
-        document.getElementById("error").innerText = "يرجى تعبئة جميع الحقول";
-        return;
-      }
-
-      const res = await fetch('users.json');
-      const users = await res.json();
-
-      if (users[username]) {
-        document.getElementById("error").innerText = "اسم المستخدم مستخدم مسبقًا";
-        return;
-      }
-
-      users[username] = { fullName, password };
-
-      await fetch('save_users.php', {
-        method: 'POST',
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(users)
-      });
-
-      alert("تم إنشاء الحساب بنجاح");
-      window.location.href = "login.html";
-    }
-  </script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+  <script src="firebase-config.js"></script>
+  <script src="signup.js"></script>
 </body>
 </html>
