--- a/signup.html
+++ b/signup.html
@@ -1,27 +1,78 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>إنشاء حساب - rengeM</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background: linear-gradient(to bottom, #1e1e2f, #2a2a3d);
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .signup-container {
+      background: #2f2f40;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 0 10px #00000080;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+    }
+    .signup-container h2 {
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 10px;
+      background: #444;
+      color: white;
+      font-size: 16px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #28a745;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #1e7e34;
+    }
+    .login-link {
+      margin-top: 15px;
+      color: #ccc;
+    }
+    .login-link a {
+      color: #00bfff;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
+
   <div class="signup-container">
-    <h2 class="app-title">rengeM</h2>
-    <form id="signupForm">
-      <input type="text" id="fullName" placeholder="الاسم الكامل" required />
-      <input type="text" id="username" placeholder="اسم المستخدم" required />
-      <input type="password" id="password" placeholder="كلمة المرور" required />
-      <button type="submit">إنشاء الحساب</button>
-      <p>لديك حساب بالفعل؟ <a href="login.html">تسجيل الدخول</a></p>
-    </form>
+    <h2>إنشاء حساب جديد في rengeM</h2>
+    <input type="text" id="fullName" placeholder="الاسم الكامل" required>
+    <input type="text" id="username" placeholder="اسم المستخدم" required>
+    <input type="password" id="password" placeholder="كلمة المرور" required>
+    <button id="signupBtn">إنشاء الحساب</button>
+    <div class="login-link">
+      لديك حساب؟ <a href="login.html">تسجيل الدخول</a>
+    </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
-  <script src="firebase-config.js"></script>
-  <script src="signup.js"></script>
+  <script type="module" src="signup.js"></script>
 </body>
 </html>
